--- a/devinmajordotcom/Views/Home/_ContactEmailForm.cshtml
+++ b/devinmajordotcom/Views/Home/_ContactEmailForm.cshtml
@@ -7,34 +7,62 @@
     @Html.HiddenFor(x => x.RecipientEmail)
     @Html.HiddenFor(x => x.RecipientName)
 
-    <div id="container" style="background-color: #0B1C1E;">
+    <div id="container">
         
         <div class="row">
             <div class="col-sm-6">
-                @Html.TextBoxFor(x => x.SenderName, new { @class = "form-control", @placeholder = "Your Name" })
+                <div class="row">
+                    <div class="col-sm-12">
+                        <span class="glyphicon glyphicon-user"></span>&nbsp;
+                        @Html.LabelFor(x => x.SenderName, new { @style = "font-weight:normal;" })
+                    </div>
+                    <div class="col-sm-12">
+                        @Html.TextBoxFor(x => x.SenderName, new { @class = "form-control text-center", @placeholder = "John Doe" })
+                    </div>
+                </div>
             </div>
             <div class="col-sm-6">
-                @Html.TextBoxFor(x => x.SenderEmailAddress, new { @class = "form-control", @placeholder = "Your Email" })
+                <div class="row">
+                    <div class="col-sm-12">
+                        <span class="glyphicon glyphicon-envelope"></span>&nbsp;
+                        @Html.LabelFor(x => x.SenderEmailAddress, new { @style = "font-weight:normal;" })
+                    </div>
+                    <div class="col-sm-12">
+                        @Html.TextBoxFor(x => x.SenderEmailAddress, new { @class = "form-control text-center", type = "email", @placeholder = "example@domain.com" })
+                    </div>
+                </div>
             </div>
         </div>
         <br />
 
         <div class="row">
             <div class="col-sm-12">
-                @Html.TextBoxFor(x => x.Subject, new { @class = "form-control", @placeholder = "Your Subject" })
+                <span class="glyphicon glyphicon-info-sign"></span>&nbsp;
+                @Html.LabelFor(x => x.Subject, new { @style = "font-weight:normal;" })
+            </div>
+            <div class="col-sm-12">
+                @Html.TextBoxFor(x => x.Subject, new { @class = "form-control text-center", @placeholder = "Let's Get In Touch" })
             </div>
         </div>
         <br />
 
         <div class="row">
             <div class="col-sm-12">
-                @Html.TextAreaFor(x => x.Content, new { @class = "form-control", @placeholder = "Your Very Important Message", @rows = "6" })
+                <span class="glyphicon glyphicon-comment"></span>&nbsp;
+                @Html.LabelFor(x => x.Content, new { @style = "font-weight:normal;" })
+            </div>
+            <div class="col-sm-12">
+                @Html.TextAreaFor(x => x.Content, new { @class = "tinymce", @placeholder = "My very important message...", @rows = "6" })
             </div>
         </div>
         <br />
         
         <div class="row">
             <div class="col-sm-12">
+                @Html.ValidationMessageFor(x => x.SenderName)
+                @Html.ValidationMessageFor(x => x.SenderEmailAddress)
+                @Html.ValidationMessageFor(x => x.Subject)
+                @Html.ValidationMessageFor(x => x.Content)
                 <div class="spinner mailSpinner" style="display: none;position:relative;top:-10px;">
                     <span class="spinner-rotate"></span>
                     <br />
