--- a/devinmajordotcom/Views/Shared/MainContactEmail.cshtml
+++ b/devinmajordotcom/Views/Shared/MainContactEmail.cshtml
@@ -295,7 +295,7 @@
                                                     <h2 style="margin: 0 0 10px 0; font-family: sans-serif; font-size: 18px; line-height: 22px; color: #333333; font-weight: bold;">Subject: </h2>
                                                     <p style="margin: 0 0 10px 0;">@Model.Subject</p>
                                                     <h2 style="margin: 0 0 10px 0; font-family: sans-serif; font-size: 18px; line-height: 22px; color: #333333; font-weight: bold;">Message: </h2>
-                                                    <p style="margin: 0 0 10px 0;">@Model.Content</p>
+                                                    <p style="margin: 0 0 10px 0;">@Html.Raw(Model.Content)</p>
                                                     <!-- Button : BEGIN -->
                                                     <table role="presentation" cellspacing="0" cellpadding="0" border="0" class="center-on-narrow" style="float:left;">
                                                         <tr>
