got it to be dynamic, just needs some UI work now

--- a/devinmajordotcom/Views/Home/_ServerStatus.cshtml
+++ b/devinmajordotcom/Views/Home/_ServerStatus.cshtml
@@ -42,6 +42,7 @@
                                 new
                                 {
                                     @class = "form-control graphDataSelector",
+                                    @id = "SelectedHardwareTypeID"
                                 }
                             )
                             </div>
@@ -57,6 +58,7 @@
                                 new
                                 {
                                     @class = "form-control graphDataSelector",
+                                    @id = "SelectedDateRangeID"
                                 }
                             )
                             </div>
