--- a/devinmajordotcom/Views/Shared/_AdminFirstRunModal.cshtml
+++ b/devinmajordotcom/Views/Shared/_AdminFirstRunModal.cshtml
@@ -33,19 +33,19 @@
                                     @using (Ajax.BeginForm("UpdateCurrentUser", controllerName, null, new AjaxOptions { AllowCache = false, HttpMethod = "Post", InsertionMode = InsertionMode.Replace, OnSuccess = "HideAdminFirstRunModal", OnFailure = "" }, new { @class="loginForm" }))
                                     {
                                         @Html.AntiForgeryToken()
-                                        @Html.HiddenFor(x => x.UserIsActive)
-                                        @Html.HiddenFor(x => x.UserIsAdmin)
-                                        @Html.HiddenFor(x => x.UserID)
-                                        @Html.HiddenFor(x => x.GUID)
-                                        @Html.Hidden("IsSigningUp", "True")
-                                        @Html.Hidden("IsUpdatingCredentials", "False")
+                                        @Html.HiddenFor(x => x.UserIsActive, new { @id = "firstRunUserIsActive" })
+                                        @Html.HiddenFor(x => x.UserIsAdmin, new { @id = "firstRunUserIsAdmin" })
+                                        @Html.HiddenFor(x => x.UserID, new { @id = "firstRunUserID" })
+                                        @Html.HiddenFor(x => x.GUID, new { @id = "firstRunGUID" })
+                                        @Html.Hidden("IsSigningUp", "True", new { @id = "firstRunIsSigningUp" })
+                                        @Html.Hidden("IsUpdatingCredentials", "False", new { @id = "firstRunIsUpdatingCredentials" })
                                         @*@Html.HiddenFor(x => x.IsSigningUp, new { value="True" })*@
                                         <div class="row">
                                             <div class="col-sm-12 text-left">
                                                 <span class="glyphicon glyphicon-envelope"></span>&nbsp;&nbsp;@Html.LabelFor(x => x.EmailAddress)
                                             </div>
                                             <div class="col-sm-12 text-center">
-                                                @Html.TextBoxFor(x => x.EmailAddress, new { @class = "form-control", @required = "required", @type="email", placeholder = "someone@domain.com" })
+                                                @Html.TextBoxFor(x => x.EmailAddress, new { @id = "firstRunEmailAddress", @class = "form-control", @required = "required", @type="email", placeholder = "someone@domain.com" })
                                             </div>
                                         </div>
                                         <br />
@@ -54,7 +54,7 @@
                                                 <span class="glyphicon glyphicon-user"></span>&nbsp;&nbsp;@Html.LabelFor(x => x.UserName)
                                             </div>
                                             <div class="col-sm-12 text-center">
-                                                @Html.TextBox("UserName", "", new { @class = "form-control", @id = "UserName", placeholder = "user_123" })
+                                                @Html.TextBox("UserName", "", new { @class = "form-control", @id = "FirstRunUserName", placeholder = "user_123" })
                                             </div>
                                         </div>
                                         <br />
@@ -63,7 +63,7 @@
                                                 <span class="glyphicon glyphicon-lock"></span>&nbsp;&nbsp;@Html.LabelFor(x => x.Password)
                                             </div>
                                             <div class="col-sm-12 text-center">
-                                                @Html.TextBoxFor(x => x.Password, new { @class = "form-control", @Value = "", @required = "required", placeholder = "********", type="password" })
+                                                @Html.TextBoxFor(x => x.Password, new { @id = "firstRunPassword", @class = "form-control", @Value = "", @required = "required", placeholder = "********", type="password" })
                                             </div>
                                         </div>
                                         <br />
