--- a/devinmajordotcom/Views/Shared/ConfirmationEmail.cshtml
+++ b/devinmajordotcom/Views/Shared/ConfirmationEmail.cshtml
@@ -276,7 +276,7 @@ The email background color (#222222) is defined in three places:
                                     <table role="presentation" cellspacing="0" cellpadding="0" border="0" width="100%">
                                         <tr>
                                             <td dir="ltr" style="padding: 0 10px 10px 10px;">
-                                                <img src="http://localhost:51450/Content/Images/favicon/email.png" width="200" height="" border="0" alt="alt_text" class="center-on-narrow" style="width: 100%; max-width: 200px; height: auto; background: #dddddd; font-family: sans-serif; font-size: 15px; line-height: 15px; color: #555555;">
+                                                <img src="https://devinmajor.com/Content/Images/favicon/email.png" width="200" height="" border="0" alt="alt_text" class="center-on-narrow" style="width: 100%; max-width: 200px; height: auto; background: #dddddd; font-family: sans-serif; font-size: 15px; line-height: 15px; color: #555555;">
                                             </td>
                                         </tr>
                                     </table>
@@ -303,7 +303,7 @@ The email background color (#222222) is defined in three places:
                                                     <tr>
                                                         <td class="button-td button-td-primary" style="border-radius: 4px; background: #222222;">
                                                             @{ 
-                                                                var url = "http://localhost:51450/MyHome/ConfirmAccount?GUID=" + Model.GUID;
+                                                                var url = "https://devinmajor.com/MyHome/ConfirmAccount?GUID=" + Model.GUID;
                                                             }
                                                             <a class="button-a button-a-primary" href="@url" target="_top" style="background: #222222; border: 1px solid #000000; font-family: sans-serif; font-size: 15px; line-height: 15px; text-decoration: none; padding: 13px 17px; display: block; border-radius: 4px;"><span class="button-link" style="color:#ffffff">Confirm Account!</span></a>
                                                         </td>
