--- a/devinmajordotcom/Views/Shared/MainContactEmail.cshtml
+++ b/devinmajordotcom/Views/Shared/MainContactEmail.cshtml
@@ -276,7 +276,7 @@
                                         <table role="presentation" cellspacing="0" cellpadding="0" border="0" width="100%">
                                             <tr>
                                                 <td dir="ltr" style="padding: 0 10px 10px 10px;">
-                                                    <img src="http://localhost:51450/Content/Images/favicon/email.png" width="200" height="" border="0" alt="alt_text" class="center-on-narrow" style="width: 100%; max-width: 200px; height: auto; background: #dddddd; font-family: sans-serif; font-size: 15px; line-height: 15px; color: #555555;">
+                                                    <img src="https://devinmajor.com/Content/Images/favicon/email.png" width="200" height="" border="0" alt="alt_text" class="center-on-narrow" style="width: 100%; max-width: 200px; height: auto; background: #dddddd; font-family: sans-serif; font-size: 15px; line-height: 15px; color: #555555;">
                                                 </td>
                                             </tr>
                                         </table>
