--- a/devinmajordotcom/Views/Home/_ManageLandingPage.cshtml
+++ b/devinmajordotcom/Views/Home/_ManageLandingPage.cshtml
@@ -26,7 +26,7 @@
 
     @using (Ajax.BeginForm("ManageLandingPage", "Home", new AjaxOptions { AllowCache = false, HttpMethod = "Post", InsertionMode = InsertionMode.Replace, OnSuccess = "ManageMainSettingsAjaxSuccess", OnFailure = "ManageMainSettingsAjaxFailure" }))
         {
-
+        @Html.AntiForgeryToken()
             <div class="panel panel-default" style="margin-bottom: 1vh; -webkit-box-shadow: 2.5px 2.5px 5px 2.5px rgba(245, 245, 245, 1); -moz-box-shadow: 2.5px 2.5px 5px 2.5px rgba(245, 245, 245, 1); box-shadow: 2.5px 2.5px 5px 2.5px rgba(245, 245, 245, 1);">
                 <div class="panel-heading portfolioPanelHeading" data-toggle="collapse" href="#collapseMain">
                     <span class="glyphicon glyphicon-collapse-up glyphicon-collapse-down"></span>
